[NEXUS-7647] Implement createrepo/mergerepo in java

--- a/buildsupport/other/pom.xml
+++ b/buildsupport/other/pom.xml
@@ -158,6 +158,17 @@
         <artifactId>quartz</artifactId>
         <version>2.2.1</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.redline-rpm</groupId>
+        <artifactId>redline</artifactId>
+        <version>1.2.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.servicemix.bundles</groupId>
+        <artifactId>org.apache.servicemix.bundles.stax-utils</artifactId>
+        <version>20070216_1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
