Remove Plexus from majority of tests

--- a/plugins/maven/nexus-archetype-plugin/pom.xml
+++ b/plugins/maven/nexus-archetype-plugin/pom.xml
@@ -55,6 +55,12 @@
       <artifactId>nexus-plugin-testsupport</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.sisu</groupId>
+      <artifactId>org.eclipse.sisu.plexus</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
