[NEXUS-7678] Set karaf.history location to ~/.nexus/karaf.history

--- a/assemblies/nexus-base-template/src/main/resources/overlay/etc/system.properties
+++ b/assemblies/nexus-base-template/src/main/resources/overlay/etc/system.properties
@@ -90,6 +90,8 @@ org.apache.aries.proxy.weaving.disabled = org.objectweb.asm.*,org.slf4j.*,org.ap
 #
 karaf.secured.services = (&(osgi.command.scope=*)(osgi.command.function=*))
 
+karaf.history=${user.home}/.nexus/karaf.history
+
 com.sun.jndi.ldap.connect.pool.protocol="plain ssl"
 
 karaf.log=${karaf.data}/log/karaf.log
