--- a/plugins/security/nexus-ldap-plugin/pom.xml
+++ b/plugins/security/nexus-ldap-plugin/pom.xml
@@ -89,8 +89,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.sonatype.nexus</groupId>
-      <artifactId>nexus-ldap-testsupport</artifactId>
+      <groupId>org.apache.directory.server</groupId>
+      <artifactId>apacheds-test-framework</artifactId>
       <scope>test</scope>
     </dependency>
 
