--- a/assemblies/nexus-base-template/pom.xml
+++ b/assemblies/nexus-base-template/pom.xml
@@ -286,6 +286,15 @@
 
     <dependency>
       <groupId>org.sonatype.nexus.plugins</groupId>
+      <artifactId>nexus-repository-maven</artifactId>
+      <version>${nexus.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.nexus.plugins</groupId>
       <artifactId>nexus-repository-raw</artifactId>
       <version>${nexus.version}</version>
       <classifier>features</classifier>
@@ -430,6 +439,7 @@
             <feature>nexus-coreui_legacy-plugin</feature>
             <feature>nexus-repository-httpbridge</feature>
             <feature>nexus-repository-nuget</feature>
+            <feature>nexus-repository-maven</feature>
             <feature>nexus-repository-raw</feature>
             <feature>nexus-repository-simple</feature>
           </installedFeatures>
