--- a/assemblies/nexus-base-template/src/main/resources/overlay/etc/nexus.properties
+++ b/assemblies/nexus-base-template/src/main/resources/overlay/etc/nexus.properties
@@ -29,6 +29,7 @@ nexus-features=\
  nexus-coreui_legacy-plugin,\
  nexus-repository-httpbridge,\
  nexus-repository-nuget,\
+ nexus-repository-maven,\
  nexus-repository-raw,\
  nexus-repository-simple
 
