--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -360,6 +360,12 @@
 
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
+        <artifactId>nexus-repository-maven</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-repository-raw</artifactId>
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
