[NEXUS-8314] Add sisu integration to register jmx mbeans for components

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -41,6 +41,7 @@
     <module>nexus-elasticsearch</module>
     <module>nexus-extender</module>
     <module>nexus-httpclient-api</module>
+    <module>nexus-jmx</module>
     <module>nexus-scheduling</module>
     <module>nexus-formfields</module>
     <module>nexus-launcher</module>
