--- a/buildsupport/other/pom.xml
+++ b/buildsupport/other/pom.xml
@@ -189,6 +189,12 @@
         <artifactId>javax.transaction-api</artifactId>
         <version>1.2</version>
       </dependency>
+
+      <dependency>
+        <groupId>com.thoughtworks.paranamer</groupId>
+        <artifactId>paranamer</artifactId>
+        <version>2.7</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
