--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,12 @@
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
+        <artifactId>nexus-jmx</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-scheduling</artifactId>
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
