--- a/buildsupport/osgi/pom.xml
+++ b/buildsupport/osgi/pom.xml
@@ -60,6 +60,12 @@
       </dependency>
 
       <dependency>
+        <groupId>org.apache.karaf.bundle</groupId>
+        <artifactId>org.apache.karaf.bundle.core</artifactId>
+        <version>${karaf.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.apache.karaf.features</groupId>
         <artifactId>framework</artifactId>
         <version>${karaf.version}</version>
