--- a/buildsupport/testing/pom.xml
+++ b/buildsupport/testing/pom.xml
@@ -65,6 +65,12 @@
       </dependency>
 
       <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+      </dependency>
+
+      <dependency>
         <groupId>httpunit</groupId>
         <artifactId>httpunit</artifactId>
         <version>1.6.2</version>
