[NEXUS-6826] pull in fix for PAXLOGGING-194 (support static logback config file)

--- a/assemblies/nexus-base-template/src/main/resources/overlay/etc/system.properties
+++ b/assemblies/nexus-base-template/src/main/resources/overlay/etc/system.properties
@@ -97,5 +97,6 @@ com.sun.jndi.ldap.connect.pool.protocol="plain ssl"
 karaf.log=${karaf.data}/log/karaf.log
 
 org.ops4j.pax.logging.StaticLogbackContext=true
+org.ops4j.pax.logging.StaticLogbackFile=${karaf.base}/etc/logback.xml
 
 h2.useThreadContextClassLoader=true
