move nexus-groovy-plugin to components/nexus-groovy Remove nexus-groovyremote-*

--- a/components/nexus-core/pom.xml
+++ b/components/nexus-core/pom.xml
@@ -292,6 +292,11 @@
 
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
+      <artifactId>nexus-groovy</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.nexus</groupId>
       <artifactId>nexus-log-api</artifactId>
     </dependency>
 
@@ -334,11 +339,6 @@
       <groupId>org.codehaus.mojo</groupId>
       <artifactId>animal-sniffer-annotations</artifactId>
       <optional>true</optional>
-    </dependency>
-
-    <dependency>
-      <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-all</artifactId>
     </dependency>
 
     <dependency>
