--- a/buildsupport/other/pom.xml
+++ b/buildsupport/other/pom.xml
@@ -183,6 +183,18 @@
         <artifactId>paranamer</artifactId>
         <version>2.7</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.codehaus.plexus</groupId>
+        <artifactId>plexus-interpolation</artifactId>
+        <version>1.16</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.codehaus.plexus</groupId>
+        <artifactId>plexus-utils</artifactId>
+        <version>3.0.20</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
