--- a/buildsupport/commons/pom.xml
+++ b/buildsupport/commons/pom.xml
@@ -84,6 +84,12 @@
         <version>1.10</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-compress</artifactId>
+        <version>1.4.1</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
