--- a/components/pom.xml
+++ b/components/pom.xml
@@ -45,6 +45,7 @@
     <module>nexus-scheduling</module>
     <module>nexus-formfields</module>
     <module>nexus-groovy</module>
+    <module>nexus-guice-servlet</module>
     <module>nexus-locks</module>
     <module>nexus-log-api</module>
     <module>nexus-mime</module>
