--- a/plugins/basic/nexus-repository-httpbridge/pom.xml
+++ b/plugins/basic/nexus-repository-httpbridge/pom.xml
@@ -49,7 +49,7 @@
     </dependency>
 
     <dependency>
-      <groupId>org.sonatype.sisu.inject</groupId>
+      <groupId>com.google.inject.extensions</groupId>
       <artifactId>guice-servlet</artifactId>
     </dependency>
 
