--- a/buildsupport/rest/pom.xml
+++ b/buildsupport/rest/pom.xml
@@ -101,6 +101,14 @@
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>jaxrs-api</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.sonatype.sisu</groupId>
+            <artifactId>sisu-guice</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.sonatype.sisu.inject</groupId>
+            <artifactId>guice-servlet</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
 
