--- a/components/nexus-ehcache/pom.xml
+++ b/components/nexus-ehcache/pom.xml
@@ -61,8 +61,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.sonatype.sisu</groupId>
-      <artifactId>sisu-guice</artifactId>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
       <scope>provided</scope>
     </dependency>
 
