--- a/components/nexus-extender/pom.xml
+++ b/components/nexus-extender/pom.xml
@@ -65,6 +65,11 @@
 
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
+      <artifactId>nexus-guice-servlet</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.nexus</groupId>
       <artifactId>nexus-webresources-api</artifactId>
     </dependency>
 
