--- a/components/nexus-repository/pom.xml
+++ b/components/nexus-repository/pom.xml
@@ -39,7 +39,7 @@
     </dependency>
 
     <dependency>
-      <groupId>org.sonatype.sisu.inject</groupId>
+      <groupId>com.google.inject.extensions</groupId>
       <artifactId>guice-assistedinject</artifactId>
     </dependency>
 
