--- a/plugins/security/nexus-ssl-client/pom.xml
+++ b/plugins/security/nexus-ssl-client/pom.xml
@@ -39,8 +39,8 @@
     <!--</dependency>-->
 
     <dependency>
-      <groupId>org.sonatype.sisu</groupId>
-      <artifactId>sisu-guice</artifactId>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
     </dependency>
 
     <dependency>
