--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,12 @@
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
+        <artifactId>nexus-guice-servlet</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-locks</artifactId>
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
