--- a/testsupport/nexus-test-common/pom.xml
+++ b/testsupport/nexus-test-common/pom.xml
@@ -33,8 +33,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.sonatype.sisu</groupId>
-      <artifactId>sisu-guice</artifactId>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
     </dependency>
 
     <dependency>
