--- a/plugins/basic/nexus-repository-httpbridge/pom.xml
+++ b/plugins/basic/nexus-repository-httpbridge/pom.xml
@@ -48,6 +48,14 @@
       <artifactId>goodies-template</artifactId>
     </dependency>
 
+    <!--
+    Needed for StringEscapeUtils for ?describe
+    -->
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
