Workaround bug in hibernate-validator where its OSGi metadata doesn't import com.thoughtworks.paranamer We do this by attaching paranamer as fragment to hibernate-validator (as we did with javax.el/validation). [NEXUS-8533] remove custom constraint messages now that defaults include parameter name Hookup Paranamer for parameter name discovery

--- a/pom.xml
+++ b/pom.xml
@@ -600,6 +600,7 @@
               -->
               <id>javax.el</id>
               <id>validation-api</id>
+              <id>paranamer</id>
               <id>httpcore</id>
               <id>httpclient</id>
               <id>xmlpull</id>
