--- a/plugins/basic/nexus-timeline-plugin/pom.xml
+++ b/plugins/basic/nexus-timeline-plugin/pom.xml
@@ -38,6 +38,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- TODO: this should probably go into nexus-plugin-api? -->
+    <dependency>
+      <groupId>org.sonatype.nexus</groupId>
+      <artifactId>nexus-repository</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
       <artifactId>nexus-orient</artifactId>
