NEXUS-8305: APIs made public, added IT (Part 2)

--- a/testsuite/modern-testsuite/pom.xml
+++ b/testsuite/modern-testsuite/pom.xml
@@ -71,9 +71,21 @@
     </dependency>
 
     <dependency>
+      <groupId>org.sonatype.nexus.plugins</groupId>
+      <artifactId>nexus-repository-maven</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpmime</artifactId>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-verifier</artifactId>
+      <version>1.5</version>
     </dependency>
   </dependencies>
 
