--- a/buildsupport/metrics/pom.xml
+++ b/buildsupport/metrics/pom.xml
@@ -40,6 +40,12 @@
       </dependency>
 
       <dependency>
+        <groupId>com.codahale.metrics</groupId>
+        <artifactId>metrics-annotation</artifactId>
+        <version>${metrics.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>com.palominolabs.metrics</groupId>
         <artifactId>metrics-guice</artifactId>
         <version>${metrics.version}</version>
