--- a/testsuite/modern-testsuite/pom.xml
+++ b/testsuite/modern-testsuite/pom.xml
@@ -101,33 +101,33 @@
     </plugins>
   </build>
 
-  <profiles>
-    <profile>
-      <id>testsuite-genshards</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.gmaven</groupId>
-            <artifactId>gmaven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>default</id>
-                <phase>process-test-sources</phase>
-                <goals>
-                  <goal>execute</goal>
-                </goals>
-                <configuration>
-                  <properties>
-                    <autoshard.mode>normal</autoshard.mode>
-                    <autoshard.count>1</autoshard.count>
-                  </properties>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
+  <!--<profiles>-->
+    <!--<profile>-->
+      <!--<id>testsuite-genshards</id>-->
+      <!--<build>-->
+        <!--<plugins>-->
+          <!--<plugin>-->
+            <!--<groupId>org.codehaus.gmaven</groupId>-->
+            <!--<artifactId>gmaven-plugin</artifactId>-->
+            <!--<executions>-->
+              <!--<execution>-->
+                <!--<id>default</id>-->
+                <!--<phase>process-test-sources</phase>-->
+                <!--<goals>-->
+                  <!--<goal>execute</goal>-->
+                <!--</goals>-->
+                <!--<configuration>-->
+                  <!--<properties>-->
+                    <!--<autoshard.mode>normal</autoshard.mode>-->
+                    <!--<autoshard.count>1</autoshard.count>-->
+                  <!--</properties>-->
+                <!--</configuration>-->
+              <!--</execution>-->
+            <!--</executions>-->
+          <!--</plugin>-->
+        <!--</plugins>-->
+      <!--</build>-->
+    <!--</profile>-->
+  <!--</profiles>-->
 
 </project>
