--- a/components/nexus-guice-servlet/pom.xml
+++ b/components/nexus-guice-servlet/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.sonatype.nexus</groupId>
     <artifactId>nexus-components</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-b2015060401</version>
   </parent>
 
   <artifactId>nexus-guice-servlet</artifactId>
