--- a/components/pom.xml
+++ b/components/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.sonatype.nexus</groupId>
     <artifactId>nexus-oss</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-b2015060401</version>
   </parent>
 
   <artifactId>nexus-components</artifactId>
@@ -72,7 +72,7 @@
         <groupId>org.sonatype.nexus.buildsupport</groupId>
         <artifactId>nexus-buildsupport-all</artifactId>
         <type>pom</type>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0-b2015060401</version>
         <scope>import</scope>
       </dependency>
 
