--- a/plugins/basic/nexus-repository-nuget/pom.xml
+++ b/plugins/basic/nexus-repository-nuget/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.sonatype.nexus.plugins</groupId>
     <artifactId>nexus-plugins-basic</artifactId>
-    <version>3.0.0-b2015060401</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>nexus-repository-nuget</artifactId>
