Add .kar extension as known type

--- a/components/nexus-mime/src/main/resources/builtin-mimetypes.properties
+++ b/components/nexus-mime/src/main/resources/builtin-mimetypes.properties
@@ -30,3 +30,4 @@ tgz = application/x-tgz,application/x-gzip,application/gzip
 bz2 = application/x-bzip2
 tbz = application/x-bzip2,application/x-bzip
 nupkg = application/zip
+kar = application/zip
