--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <name>${project.groupId}:${project.artifactId}</name>
   <packaging>pom</packaging>
 
-  <version>3.0.0-b2015060901</version>
+  <version>3.0.0-SNAPSHOT</version>
 
   <inceptionYear>2008</inceptionYear>
   <url>http://nexus.sonatype.org/</url>
@@ -93,7 +93,7 @@
     Define nexus versions.  The 'nexus.version' property always refers to the version of the current project.
     These values must always be constants; 'nexus.version' will get update automatically by set-version.
     -->
-    <nexus.version>3.0.0-b2015060901</nexus.version>
+    <nexus.version>3.0.0-SNAPSHOT</nexus.version>
 
     <!--
     NOTE: Leaving this asis for now, lots of configuration related stuff will change making this value irrelevant.
@@ -138,7 +138,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.assemblies</groupId>
         <artifactId>karaf-nexus-branding</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- components -->
@@ -146,199 +146,199 @@
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-analytics-api</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-blobstore-api</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-blobstore-file</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-bootstrap</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-capability</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-client</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-commands</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-common</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-core</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-orient</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-ehcache</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-elasticsearch</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-email</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-extender</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-httpclient</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-jmx</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-scheduling</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-formfields</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-groovy</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-guice-servlet</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-log-api</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-mime</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-oss-edition</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-plugin-api</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-repository</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-security</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-servlet</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-supportzip-api</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-thread</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-validation</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-webresources-api</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>pax-logging-metrics</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>pax-logging-access</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- testsupport -->
@@ -346,13 +346,13 @@
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-pax-exam</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-test-common</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- assemblies -->
@@ -360,7 +360,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.assemblies</groupId>
         <artifactId>nexus-base-template</artifactId>
-        <version>3.0.0-b2015060901</version>
+        <version>3.0.0-SNAPSHOT</version>
         <type>zip</type>
       </dependency>
 
