--- a/plugins/basic/nexus-repository-maven/src/main/resources/org/sonatype/nexus/repository/maven/internal/maven2/elasticsearch-mapping.json
+++ b/plugins/basic/nexus-repository-maven/src/main/resources/org/sonatype/nexus/repository/maven/internal/maven2/elasticsearch-mapping.json
@@ -10,18 +10,44 @@
   },
   "mappings": {
     "component": {
+      "dynamic_templates": [
+        {
+          "attributes.maven2": {
+            "path_match": "attributes.maven2.*",
+            "match_mapping_type": "string",
+            "mapping": {
+              "type": "string",
+              "index": "not_analyzed"
+            }
+          }
+        },
+        {
+          "assets.attributes.maven2": {
+            "path_match": "assets.attributes.maven2.*",
+            "match_mapping_type": "string",
+            "mapping": {
+              "type": "string",
+              "index": "not_analyzed"
+            }
+          }
+        }
+      ],
       "properties": {
-        "attributes": {
+        "assets": {
           "properties": {
-            "maven": {
+            "attributes": {
               "properties": {
-                "path": {
-                  "type": "string",
-                  "index": "not_analyzed",
-                  "fields": {
-                    "tree": {
+                "maven2": {
+                  "properties": {
+                    "path": {
                       "type": "string",
-                      "analyzer": "paths"
+                      "index": "not_analyzed",
+                      "fields": {
+                        "tree": {
+                          "type": "string",
+                          "analyzer": "paths"
+                        }
+                      }
                     }
                   }
                 }
