--- a/plugins/basic/nexus-repository-nuget/src/main/resources/com/sonatype/nexus/repository/nuget/internal/elasticsearch-mapping.json
+++ b/plugins/basic/nexus-repository-nuget/src/main/resources/com/sonatype/nexus/repository/nuget/internal/elasticsearch-mapping.json
@@ -11,6 +11,16 @@
               "index": "not_analyzed"
             }
           }
+        },
+        {
+          "assets.attributes.nuget": {
+            "path_match": "assets.attributes.nuget.*",
+            "match_mapping_type": "string",
+            "mapping": {
+              "type": "string",
+              "index": "not_analyzed"
+            }
+          }
         }
       ],
       "properties": {
@@ -18,17 +28,45 @@
           "properties": {
             "nuget": {
               "properties": {
-                "tags": {
+                "title": {
                   "type": "string",
                   "index": "analyzed"
-                },
-                "summary": {
-                  "type": "string",
-                  "index": "analyzed"
-                },
-                "description": {
-                  "type": "string",
-                  "index": "analyzed"
+                }
+              }
+            }
+          }
+        },
+        "assets": {
+          "properties": {
+            "attributes": {
+              "properties": {
+                "nuget": {
+                  "properties": {
+                    "authors": {
+                      "type": "string",
+                      "index": "analyzed"
+                    },
+                    "description": {
+                      "type": "string",
+                      "index": "analyzed"
+                    },
+                    "keywords": {
+                      "type": "string",
+                      "index": "no"
+                    },
+                    "tags": {
+                      "type": "string",
+                      "index": "analyzed"
+                    },
+                    "title": {
+                      "type": "string",
+                      "index": "analyzed"
+                    },
+                    "summary": {
+                      "type": "string",
+                      "index": "analyzed"
+                    }
+                  }
                 }
               }
             }
