--- a/assemblies/nexus-boot-feature/pom.xml
+++ b/assemblies/nexus-boot-feature/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.sonatype.nexus.assemblies</groupId>
     <artifactId>nexus-assemblies</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-b2015061001</version>
   </parent>
 
   <artifactId>nexus-boot-feature</artifactId>
