--- a/plugins/basic/nexus-quartz-plugin/pom.xml
+++ b/plugins/basic/nexus-quartz-plugin/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.sonatype.nexus.plugins</groupId>
     <artifactId>nexus-plugins-basic</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-b2015061001</version>
   </parent>
 
   <artifactId>nexus-quartz-plugin</artifactId>
