--- a/components/nexus-validation/pom.xml
+++ b/components/nexus-validation/pom.xml
@@ -66,4 +66,21 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <configuration>
+          <instructions>
+            <Fragment-Host>org.hibernate.validator</Fragment-Host>
+            <Import-Package>
+              javax.script,org.codehaus.groovy.jsr223,*
+            </Import-Package>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
