--- a/plugins/basic/nexus-repository-httpbridge/pom.xml
+++ b/plugins/basic/nexus-repository-httpbridge/pom.xml
@@ -30,22 +30,14 @@
   <dependencies>
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
-      <artifactId>nexus-common</artifactId>
+      <artifactId>nexus-plugin-api</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
       <artifactId>nexus-repository</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.sonatype.nexus</groupId>
-      <artifactId>nexus-servlet</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.sonatype.sisu.goodies</groupId>
-      <artifactId>goodies-template</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <!--
