--- a/buildsupport/db/pom.xml
+++ b/buildsupport/db/pom.xml
@@ -28,7 +28,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <orientdb.version>2.1-rc3</orientdb.version>
+    <orientdb.version>2.0.10</orientdb.version>
   </properties>
 
   <dependencyManagement>
