--- a/components/nexus-core/pom.xml
+++ b/components/nexus-core/pom.xml
@@ -70,6 +70,11 @@
 
     <dependency>
       <groupId>org.sonatype.sisu.goodies</groupId>
+      <artifactId>goodies-ssl</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.sisu.goodies</groupId>
       <artifactId>goodies-template</artifactId>
     </dependency>
 
