[NEXUS-8813] Hookup basic functional-testsuite, copy over FrameworkIT and related

--- a/testsupport/pom.xml
+++ b/testsupport/pom.xml
@@ -30,6 +30,7 @@
   <modules>
     <module>nexus-test-common</module>
     <module>nexus-pax-exam</module>
+    <module>nexus-siestajs-testsupport</module>
   </modules>
 
   <dependencyManagement>
