enable nexus-siestajs-testsupport module with -Dft

--- a/testsupport/pom.xml
+++ b/testsupport/pom.xml
@@ -30,7 +30,6 @@
   <modules>
     <module>nexus-test-common</module>
     <module>nexus-pax-exam</module>
-    <module>nexus-siestajs-testsupport</module>
   </modules>
 
   <dependencyManagement>
@@ -80,5 +79,22 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <!--
+    Enable functional-testsuite support module
+    -->
+    <profile>
+      <id>functional-testsuite</id>
+      <activation>
+        <property>
+          <name>ft</name>
+        </property>
+      </activation>
+      <modules>
+        <module>nexus-siestajs-testsupport</module>
+      </modules>
+    </profile>
+  </profiles>
 
 </project>
