[NEXUS-8814] Index/Search smoke functional tests
commit 03a3dc853714437eae63a60aed6460815ccd06d4
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Wed Jul 1 10:46:45 2015 +0300

    Fix license headers

commit d49be40c94ab63caf22a21cf79e04fa0b5a272ec
Merge: df209ec 8d82e11
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Wed Jul 1 10:42:31 2015 +0300

    Merge remote-tracking branch 'origin/master' into NEXUS-8814-index-search-ft

commit df209ec4a5113c390580245781be36b4583989f4
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Wed Jul 1 10:41:59 2015 +0300

    Drop useless wait for animations

commit 1f8bd7ef88d0594831c1d56f68de2c23d4e8d6a9
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Tue Jun 30 21:41:41 2015 +0300

    Name part as file

commit 30965e7b0d0b595cf3d9190485d87e295c5f82c0
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Tue Jun 30 21:31:15 2015 +0300

    Assert publishing returns 201

commit 0b9d8715bed00ebb455522843467d6c6d1a87882
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Tue Jun 30 21:24:07 2015 +0300

    Add raw search test

commit e355c70c2433954c981eb478cf847bbf595563a2
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Tue Jun 30 21:09:54 2015 +0300

    Deploy to maven/nuget

commit 68e5f93a001ee6615e071c4eb65a2b82aab73081
Author: Alin Dreghiciu <adreghiciu@gmail.com>
Date:   Tue Jun 30 19:08:17 2015 +0300

    Search smoke FT

--- a/testsuite/functional-testsuite/pom.xml
+++ b/testsuite/functional-testsuite/pom.xml
@@ -48,6 +48,24 @@
       <type>zip</type>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.nexus</groupId>
+      <artifactId>nexus-repository</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.sonatype.nexus.plugins</groupId>
+      <artifactId>nexus-repository-maven</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpmime</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
