Fix nexus-pax-exam transitive dependencies to avoid duplication

--- a/testsupport/nexus-pax-exam/pom.xml
+++ b/testsupport/nexus-pax-exam/pom.xml
@@ -31,12 +31,14 @@
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.compendium</artifactId>
-      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
 
     <!--
