Temporary dependency to workaround PAXURL-299

--- a/testsupport/nexus-pax-exam/pom.xml
+++ b/testsupport/nexus-pax-exam/pom.xml
@@ -36,6 +36,10 @@
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.compendium</artifactId>
     </dependency>
+
+    <!--
+    Temporary dependency to workaround PAXURL-299
+    -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
