[NEXUS-6795] share IT resources

--- a/pom.xml
+++ b/pom.xml
@@ -367,6 +367,30 @@
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.sonatype.nexus</groupId>
+        <artifactId>nexus-maven-test-data</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.sonatype.nexus</groupId>
+        <artifactId>nexus-nuget-test-data</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.sonatype.nexus</groupId>
+        <artifactId>nexus-raw-test-data</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.sonatype.nexus</groupId>
+        <artifactId>nexus-ssl-test-data</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
       <!-- assemblies -->
 
       <dependency>
@@ -652,6 +676,7 @@
               <exclude>**/src/test/resources/**</exclude>
               <exclude>**/src/test/filtered-resources/**</exclude>
               <exclude>**/src/test/it-resources/**</exclude>
+              <exclude>**/*-test-data/**/resources/**</exclude>
 
               <!--
               Exclude third-party resources.
