Configure source.sources to include java and javascript sources for UI modules

--- a/plugins/rapture/nexus-coreui-plugin/pom.xml
+++ b/plugins/rapture/nexus-coreui-plugin/pom.xml
@@ -29,6 +29,7 @@
 
   <properties>
     <pluginDescription>Provides a Nexus user interface based on Rapture.</pluginDescription>
+    <sonar.sources>src/main/java,src/main/resources/static/rapture</sonar.sources>
   </properties>
 
   <dependencies>
