--- a/plugins/rapture/nexus-rapture-plugin/pom.xml
+++ b/plugins/rapture/nexus-rapture-plugin/pom.xml
@@ -29,6 +29,7 @@
 
   <properties>
     <pluginDescription>Next-gen UI framework.</pluginDescription>
+    <sonar.sources>src/main/java,src/main/resources/static/rapture</sonar.sources>
   </properties>
 
   <dependencies>
