Change nexus-work to ${karaf.data} and related changes to strip out sonatype-work directory

--- a/assemblies/nexus-base-template/pom.xml
+++ b/assemblies/nexus-base-template/pom.xml
@@ -333,13 +333,13 @@
                 </replace>
 
                 <!--
-                HACK: extract orientdb studio.zip plugin
+                HACK: Include orientdb-studio plugin.
                 -->
                 <unzip src="${com.orientechnologies:orientdb-community:zip:distribution}"
-                       dest="${project.build.directory}/orient-plugins">
+                       dest="${project.build.directory}/assembly/data/orient/plugins">
                   <mergemapper to="studio.zip"/>
                   <patternset>
-                    <include name="*/plugins/studio-2.0.zip"/>
+                    <include name="*/plugins/studio-*.zip"/>
                   </patternset>
                 </unzip>
               </target>
