--- a/assemblies/nexus-base-template/src/main/resources/overlay/etc/nexus.properties
+++ b/assemblies/nexus-base-template/src/main/resources/overlay/etc/nexus.properties
@@ -4,7 +4,7 @@ application-host=0.0.0.0
 nexus-context-path=/
 
 # Nexus section
-nexus-work=${nexus-base}/../sonatype-work/nexus
+nexus-work=${karaf.data}
 nexus-edition=nexus-oss-edition
 nexus-features=\
  nexus-webresources-plugin,\
