--- a/components/nexus-core/pom.xml
+++ b/components/nexus-core/pom.xml
@@ -133,7 +133,7 @@
 
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
-      <artifactId>nexus-ehcache</artifactId>
+      <artifactId>nexus-cache</artifactId>
     </dependency>
 
     <dependency>
