--- a/components/nexus-security/pom.xml
+++ b/components/nexus-security/pom.xml
@@ -46,7 +46,7 @@
 
     <dependency>
       <groupId>org.sonatype.nexus</groupId>
-      <artifactId>nexus-ehcache</artifactId>
+      <artifactId>nexus-cache</artifactId>
     </dependency>
 
     <dependency>
@@ -67,11 +67,6 @@
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-web</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.shiro</groupId>
-      <artifactId>shiro-ehcache</artifactId>
     </dependency>
 
     <dependency>
