--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
 
   <modules>
     <module>buildsupport</module>
+    <module>thirdparty-bundles</module>
     <module>testsupport</module>
     <module>components</module>
     <module>assemblies</module>
@@ -205,7 +206,7 @@
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
-        <artifactId>nexus-ehcache</artifactId>
+        <artifactId>nexus-cache</artifactId>
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
@@ -636,6 +637,7 @@
               -->
               <id>javax.el</id>
               <id>validation-api</id>
+              <id>cache-api</id>
               <id>paranamer</id>
               <id>httpcore</id>
               <id>httpclient</id>
