Avoid original ehcache leaking into assembly (latest versions of maven don't use the dependency reduced pom, preferring the original pom in the reactor)

--- a/thirdparty-bundles/ehcache/pom.xml
+++ b/thirdparty-bundles/ehcache/pom.xml
@@ -40,6 +40,7 @@
       <groupId>net.sf.ehcache</groupId>
       <artifactId>ehcache</artifactId>
       <version>${ehcache.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
